Resolve touch alignment issues

--- a/src/style.css
+++ b/src/style.css
@@ -68,3 +68,7 @@ body {
 .card-button.selected {
   outline: 2px solid #FFFF55;
 }
+
+.selected-char {
+  color: #FFFF55; /* EGA Yellow */
+}
